...
      <TextInput
        style={[styles.searchBar, {color: appTheme.text}]}
        placeholder={t("general:search")}
        placeholderTextColor={appTheme.text}
        value={searchText}
        onChangeText={setSearchText}
        testID="searchInput"
        autoCapitalize="none"
        autoCorrect={false}
      />
      <FlatList
        data={catsQuery.data?.pages.flat()}
        refreshControl={
...
            <View style={styles.row}>
              <Card.Title style={styles.cardTitle}>{item.name}</Card.Title>
              <ThemedText
                type="bodyMedium"
                onPress={() => goToDetail(item.id)}
                style={styles.link}
                testID="catDetailLink">
                {t("general:viewMore")}
              </ThemedText>
            </View>
            {item.image?.url && <Card.Cover uri={item.image.url} />}
            <View style={styles.row}>
              <InlineLabel.Value>{item.origin}</InlineLabel.Value>
...
